# dmcr-scheduling

./: LICENSE  MANIFEST.in  README.md  dmcrs.py  human_play.py  lbforaging.py  pyproject.toml  setup.py
dmcrs/: __init__.py
dmcrs/agents/: __init__.py  agent.py  hba.py  heuristic_agent.py  monte_carlo.py  nn_agent.py  q_agent.py  random_agent.py
dmcrs/scheduling/: __init__.py  environment.py  rendering.py
lbforaging/: __init__.py
lbforaging/agents/: agent.py  heuristic_agent.py
lbforaging/foraging/: environment.py  rendering.py
tests/: test_env.py
